fix: :fire: fixed tooltip overlapping issue and spacings

--- a/src/components/CustomTooltip/custom-tooltip.scss
+++ b/src/components/CustomTooltip/custom-tooltip.scss
@@ -1,6 +1,6 @@
 .tooltip_content {
   border-radius: 4px;
-  padding: 8px 0px;
+  padding: 8px 4px;
   font-size: 12px;
   line-height: 14px;
   color: var(--ifm-color-emphasis-100);
