--- a/src/features/dashboard/components/api-token-table/api-table.module.scss
+++ b/src/features/dashboard/components/api-token-table/api-table.module.scss
@@ -31,7 +31,6 @@
   }
 
   table {
-    z-index: 1;
     table-layout: fixed;
     border-collapse: collapse;
     margin-inline: 48px;
